connect ke db load balancing

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 MONGO_URL = mongodb://mycl0ud1nd0_E_Wallet:26s13ejN1CgNkwxcpijv@195.7.4.115:27017/e_wallet
 SECRET_KEY_JWT =jewfu89jekjk56sjjsduiu
+DB_HOST=217.15.167.198
+DB_PORT=6033
+DB_USER=mycloudindo
+DB_PASSWORD=J3KIF8jJ7ChPgKrswaw!
+DB_NAME=db_polkabox_staging
