--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.3",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.14"
+    "mysql2": "^3.15.0",
+    "nodemailer": "^6.9.14",
+    "sequelize": "^6.37.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
